# aplikasikuh

./: CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp
components/contents/: HomePage.qml
components/main/: ContentContainer.qml  SideBar.qml
components/qml/contents/: HomePage.qml
components/qml/contents/HomePageSections/: Section1.qml
components/qml/main/: ContentContainer.qml  NavBar.qml  OpeningAnimation.qml  SideBar.qml
components/src/: Backend.cpp  Backend.h
components/src/components/: NavBar.cpp  Navbar.h  OpeningAnimation.cpp  OpeningAnimation.h
components/src/services/database/: SqlCondition.h  SqlConditionBuilder.h  SqlDatabase.cpp  SqlDatabase.h
components/src/services/network/: GithubConnection.cpp  GithubConnection.h  MainNetwork.cpp  MainNetwork.h
